# dspbp

./: Cargo.toml  LICENSE  README.md  README_python.md  pyproject.toml  setup.cfg  setup.py  update_data.py
.github/workflows/: release.yml
data/cn/: items.txt  recipes.txt
data/en/: items.txt  recipes.txt
dumps/MonoBehaviour/: ItemProtoSet.json  RecipeProtoSet.json  TechProtoSet.json
examples/: Example interstellar station 1.txt
src/: args.rs  blueprint.rs  bpdata.rs  error.rs  lib.rs  localized.rs  main.rs  md5.rs  serialize.rs  stats.rs  testutil.rs
src/data/: DYSON_DATA.rs  area.rs  belt.rs  blueprint.rs  building.rs  enums.rs  mod.rs  station.rs  traits.rs  vec.rs  visit.rs
src/data/lang/: mod.rs
src/data/lang/lang_en/: item_en.rs  recipe_en.rs
src/data/lang/lang_zh/: mod.rs  recipe.rs
src/edit/: mod.rs  replace.rs  round.rs  stats.rs
src/locale/: mod.rs
src/locale/data/cn/: items.rs  recipes.rs
src/locale/data/en/: items.rs  recipes.rs
src/python/: mod.rs
