[package]
name = "dspbp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
flate2 = "*"
base64 = "*"
anyhow = "*"
thiserror = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"], optional = true}
binrw = "*"
num_enum = "*"
serde_json = {version = "*", optional = true }
strum = { version = "*", features = ["derive"] }
urlencoding = "*"
log = "*"
simple_logger = "*"

[features]
default = ["dump"]
dump = ["serde", "serde_json"]
