[project]
name = "dspbp"
version = "0.0.3"
authors = [
    { name="Wesmania", email="ikotrasinsk@gmail.com" }
]
description = "Blueprint editing tools for Dyson Sphere Program"
readme = "README_python.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
