[metadata]
name = dspbp
version = 0.1.1
description = Blueprint editing tools for Dyson Sphere Program
long_description = file: README_python.md
long_description_content_type = text/markdown
url = https://github.com/Wesmania/dspbp
license = License :: OSI Approved :: MIT License
license_file = LICENSE
readme = README_python.md
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

project_urls =
    Source=https://github.com/Wesmania/dspbp
    Tracker=https://github.com/Wesmania/dspbp/issues

[options]
python_requires = >=3.7
